# dagger-relic

./: .editorconfig  .gitignore  .gitmodules  README.md  README_WSL.md  dagger.ini  make.bat  meson.build  meson_options.txt  premake5.lua
.github/workflows/: main.yaml
Levels/: level1.txt  level2.txt  level3.txt
data/: Attack.png.data  entry.data  entry.yaml  environment.png.data  exit1.bmp.data  exit1.png.data  lightmap.png.data  lightmap2.png.data  play1.bmp.data  play1.png.data  player.grasm  ppfx.png.data  pyramids2.png.data  spritesheets.data  spritesheets.yaml  textures.data  textures.yaml  track.png.data  track2.png.data
data/Golem/: Golem1_attack.png.data  Golem1_idle.png.data  Golem1_run.png.data
data/Knight/: idle.png.data  jump.png.data  knight.png.data  walk.png.data
data/Moose/: Moose1_Idle.png.data  Moose1_attack_all_effects.png.data  Moose1_run.png.data
data/Rogue/: idle.png.data  jump.png.data  rogue.png.data  walk.png.data
data/Skeleton/: Skeleton_Idle.png.data  Skeleton_attack.png.data
data/background/: bcg.png.data  bg47.png.data  bg47.png.spritesheet.yaml  grass_background.png.data
data/boulder/: boulder_r1.png.data  boulder_r2.png.data  boulder_r3.png.data  boulder_r4.png.data  boulder_r5.png.data  boulder_r6.png.data  boulder_r7.png.data  boulder_r8.png.data
data/box/: box.clip  box.png.data  box_1.png.data  box_2.png.data  box_3.png.data  box_4.png.data
data/coin/: goldCoin.png.data
data/fallingHero/: attack.png.data  attack.png.spritesheet.yaml  attackLeft.png.data  falling.png.data  heroStanding.png.data  heroStanding.png.spritesheet.yaml  leftHeroStanding.png.data  runningLeft.png.data  runningRight.png.data  runningRight.png.spritesheet.yaml
data/flags/: greenflag.png.data  orangeflag.png.data
data/healthBar/: healthBar.png.data
data/healthbar/: health.png.data  healthbar_0.png.data  healthbar_1.png.data  healthbar_2.png.data  healthbar_3.png.data  healthbar_4.png.data  healthbar_5.png.data  healthbar_6.png.data  healthbar_7.png.data  healthbar_8.png.data  healthbar_9.png.data
data/levelOne/: coinPosition.txt
docs/: setting_up_unix.md  setting_up_windows.md
include/: Access.h  Algebra.h  Animations.h  Assets.h  Background.h  Boulder.h  Box.h  BoxMovingSystem.h  Combat.h  Common.h  Components.h  Config.h  CreateMenu.h  DaggerEditorTool.h  DamageSystem.h  DataBrowserTool.h  Definitions.h  Diagnostics.h  DiagnosticsTool.h  DiagnosticsUtil.h  DynamicLib.h  Enemies.h  EnemyFSM.h  EnemyFSMController.h  Engine.cpp  Engine.h  EngineButton.h  EventBus.h  FPSCalculator.h  FSM.h  Fight.h  FiniteStateMachine.h  FloorComponent.h  GameComponents.h  GamePlatform.h  GameSpecificComponents.h  GameSpecificSystems.h  GameSystem.h  Generator.h  Geometry.h  (+50 more)
src/: Access.cpp  Animations.cpp  Assets.cpp  Background.cpp  BoxMovingSystem.cpp  Combat.cpp  Config.cpp  DaggerEditorTool.cpp  DataBrowserTool.cpp  Diagnostics.cpp  DiagnosticsTool.cpp  EventBus.cpp  FPNG.cpp  FPSCalculator.cpp  Fight.cpp  GamePlatform.cpp  Generator.cpp  Gravity.cpp  HealthBar.cpp  ImagePreviewTool.cpp  ImguiTextEditor.cpp  Item.cpp  LevelManager.cpp  Loaders.cpp  LodePNG.cpp  Main.cpp  MainMenu.cpp  MenuControlSystem.cpp  MenuFSM.cpp  Monster.cpp  OldMain.cpp  OverlayRendering.cpp  Pickup.cpp  Platform.cpp  Platforms.cpp  Player.cpp  PlayerControls.cpp  PlayerControlsSystem.cpp  PlayerFSM.cpp  PostProcessRendering.cpp  (+14 more)
subprojects/: entt.wrap  imgui.wrap  sdl2_mixer.wrap
(+111 files in other folders)
